fix behind panels

--- a/src.css
+++ b/src.css
@@ -190,6 +190,9 @@ div[class^="searchBar-"] button[class^="searchBarComponent-"]::before {
     text-shadow: 0 0 3px 3px black;
 }
 
+.sidebar-1tnWFu {
+    background: var(--bg-overlay-3,var(--background-secondary));
+}
 .panels-3wFtMD, .panels-3wFtMD div[class^="container-"] {
     border-radius: 1em;
 }
